updated src (no live build), grap fixes,  text align fixess  other fixes

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -161,6 +161,7 @@ main {
             flex-direction: column !important;
             width: 30ch !important;
             color: $text !important;
+            justify-content: center !important;
 
             &:hover {
                 background-color: $secondary !important;
